# kokoretro

./: Makefile  README.md  commands.html
src/: CMakeLists.txt
src/apps/: bundle.py
src/core/: CMakeLists.txt  CMakeLists.txt~  fab.c  fab.h  gif_info.c  gif_png.c  gif_stl.c  path_epi.c  png_path.c  svg_path.c  vol_gif.c
src/guis/: CMakeLists.txt  asdf_view  cad_ui  fab  fabserver  kokopelli  make_cad_camm  make_cad_drl  make_cad_dxf  make_cad_epi  make_cad_eps  make_cad_g  make_cad_grb  make_cad_ord  make_cad_png  make_cad_rml  make_cad_sbp  make_cad_snap  make_cad_stl  make_cad_uni  make_gif_stl  make_math_camm  make_math_drl  make_math_dxf  make_math_epi  make_math_eps  make_math_g  make_math_grb  make_math_ord  make_math_rml  make_math_sbp  make_math_stl  make_math_uni  make_png_Roland_SRM_20  make_png_camm  make_png_drl  make_png_dxf  make_png_epi  make_png_epi_halftone  make_png_eps  (+28 more)
src/guis/koko/: canvas.py  dialogs.py  frame.py  themes.py
src/guis/koko/c/: libfab.py
src/guis/koko/cam/: workflow.py
src/guis/koko/doc/: Doxyfile
src/guis/koko/prims/: editpanel.py
src/guis/koko/retro/: about.py  app.py  canvas.py  (+10 more)
src/libfab/: CMakeLists.txt  CMakeLists.txt~  test.c
src/libfab/asdf/: cms.c
src/libfab/doc/: Doxyfile
src/py/: CMakeLists.txt  fab_mods.py  fab_set.py  panel_path_sbp.py  panel_png.py  panel_png_path.py  png_l.py
src/scripts/: CMakeLists.txt  asdf_histogram  asdf_png  asdf_stl  cad_math  cad_path  eagle_png  fab_send  fab_update  math_png_py  math_stl_py  png_tile  vol_asdf  vol_stl
src/solver/: CMakeLists.txt  CMakeLists.txt~
(+14 files in other folders)
